
    - Attributes defined in the resource mapping file will only be included in
      the resource schema if it is mapped to an LDAP attribute or is derived
      from one or more LDAP attributes.

  * Resolved Issues

    - Fixed issue where the number of resources returned from a query maybe less
      than totalResults.

---------- SCIM 1.6.2 ----------

  * Release Date: April 4th, 2014

  * This release is for targeted customers only.  It provides an undocumented
    feature to help with migration and is not intended or supported for general
    release.

---------- SCIM 1.6.1 ----------

  * Release Date: March 25, 2014

  * This release is for targeted customers only.  It provides an undocumented
    feature to help with migration and is not intended or supported for general
    release.

---------- SCIM 1.6.0 ----------

  * Release Date: January 30, 2014

  * This is an upgrade release with some significant enhancements. Users of
    previous releases are encouraged to upgrade.

  * New Features

    - Added support for SCIM resource versioning. DS-9612

        - As required by the SCIM 1.1 REST API specification, bulk
          requests using the PUT, PATCH, or DELETE methods must include
          an operations.version value; existing client code may therefore
          need to be updated prior to enabling this feature. The server
          does not enforce the operations.version requirement.

        - Non-bulk modification requests (PUT and PATCH) must also specify
          the expected resource version via an If-Match header, according to
          the SCIM specification. However, the server does not enforce this.

        - Added new update(...) and delete(...) methods to SCIMEndpoint to
          facilitate usage of resource versioning having to explicitly
          specify an ETag.

        - The LDAP attribute used for ETags is configurable on the server side.
          Current ETags may be retrieved from the newly added